syntax = "proto3";

package greet;
option go_package="calculator/calculatorpb";

message Calculator {
  int32 parameter_one = 1;
  int32 parameter_two = 2;
}

message CalculatorRequest {
  Calculator calculator = 1;
}

message CalculatorResponse {
  int32 calculator_result = 1;
}

service CalculatorService{
  rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};
}